Se agregaron funcionalidades del cliente, además, se cambiaron algunas entidades en cuanto a sus atributos

--- a/web/src/main/webapp/WEB-INF/template.xhtml
+++ b/web/src/main/webapp/WEB-INF/template.xhtml
@@ -19,7 +19,7 @@
 </h:head>
 
 <h:body>
-    <div id="barra_nav">
+    <div jsf:id="barra_nav">
         <header class="p-4 text-bg-dark">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -43,12 +43,11 @@
                     <div class="text-end">
                         <h:form rendered="#{!seguridadBean.autenticado}">
                             <p:commandButton value="Login" oncomplete="PF('login').show()" styleClass="ui-button-outlined ui-badge-secondary me-2" />
-                            <p:linkButton value="Registrarse" href="/registroCliente.xhtml"
-                                          styleClass="text-decoration-none"/>
+                            <p:linkButton value="Registrarse" href="/registroCliente.xhtml" styleClass="sin-linea"/>
                         </h:form>
 
                         <h:form rendered="#{seguridadBean.autenticado}" >
-                            <p:linkButton value="Mi perfil" icon="pi pi-user" styleClass="me-3" href="#" />
+                            <p:linkButton value="Mi perfil" icon="pi pi-user" styleClass="me-3 sin-linea" href="/cliente/mi_perfil.xhtml"/>
                             <p:commandButton value="Cerrar sesión" action="#{seguridadBean.cerrarSesion()}" styleClass="ui-button-outlined ui-badge-secondary me-2" />
                         </h:form>
                     </div>
@@ -71,29 +70,56 @@
             </div>
 
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-muted" href="#"> <i class="pi pi-facebook"/> </a></li>
-                <li class="ms-3"><a class="text-muted" href="#"> <i class="pi pi-instagram"/> </a></li>
-                <li class="ms-3"><a class="text-muted" href="#"> <i class="pi pi-twitter"/> </a></li>
+                <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/juanploaizan/"> <i class="pi pi-facebook"/> </a></li>
+                <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/juanploaizan/"> <i class="pi pi-instagram"/> </a></li>
+                <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/juanploaizan/"> <i class="pi pi-twitter"/> </a></li>
             </ul>
         </footer>
     </div>
 
     <p:dialog header="Iniciar sesión" showEffect="fade" widgetVar="login" modal="true"
-              rendered="#{!seguridadBean.autenticado}">
+              rendered="#{!seguridadBean.autenticado}" blockScroll="true" draggable="false" >
+
+        <h:form>
+
+            <div class="container iniciar-sesion" >
+                <div style="align-self: center; align-content: center; text-align: center">
+                    <p:outputLabel for="cedula_login" value="Cédula:" styleClass="me-4"/>
+                    <p:inputText id="cedula_login" value="#{seguridadBean.cedula}" required="true"/>
+                    <p:message for="cedula_login"/>
+                </div>
+
+                <div style="align-self: center; align-content: center; text-align: center; margin-top: 10px">
+                    <p:outputLabel for="password_login" value="Password:" styleClass="me-3" />
+                    <p:password id="password_login" value="#{seguridadBean.password}" required="true"/>
+                    <p:message for="password_login"/>
+                </div>
+
+                <p:commandButton value="Iniciar Sesión" action="#{seguridadBean.iniciarSesionCliente()}"
+                                 styleClass="mt-4" update="@form, barra_nav" icon="pi pi-sign-in" iconPos="left"/>
+
+                <p:commandButton type="button" value="¿Olvidaste la contraseña?" styleClass="ui-button-secondary ui-button-flat"
+                                 onclick="PF('olvidaste_contrasenia').show()"/>
+
+                <p:growl for="login-bean" showDetail="true"/>
+
+            </div>
+
+        </h:form>
+    </p:dialog>
+
+    <p:dialog header="Recuperar contraseña" showEffect="fade" widgetVar="olvidaste_contrasenia" modal="true" >
         <h:form>
             <h:panelGrid columns="3" cellpadding="5">
-                <p:outputLabel for="cedula_login" value="Cédula:"/>
-                <p:inputText id="cedula_login" value="#{seguridadBean.cedula}" required="true"/>
-                <p:message for="cedula_login"/>
-
-                <p:outputLabel for="password_login" value="Password:"/>
-                <p:password id="password_login" value="#{seguridadBean.password}" required="true"
-                />
-                <p:message for="password_login"/>
+                <p:outputLabel for="email_recuperacion" value="Email de recuperación:"/>
+                <p:inputText id="email_recuperacion" value="#{seguridadBean.email}" required="true" />
+                <p:message for="email_recuperacion"/>
             </h:panelGrid>
-            <p:commandButton value="Iniciar Sesión" action="#{seguridadBean.iniciarSesionCliente()}"
-                             styleClass="mt-4" update="@form" icon="pi pi-sign-in" iconPos="left"/>
-            <p:growl for="login-bean" showDetail="true"/>
+            <div>
+                <p:commandButton value="Enviar correo" action="#{seguridadBean.reestablecerContrasenia()}"
+                                 styleClass="mt-4" update="@form" icon="pi pi-sign-in" iconPos="left" oncomplete="PF('olvidaste_contrasenia').hide()"/>
+            </div>
+            <p:growl for="recuperacion" showDetail="true"/>
         </h:form>
     </p:dialog>
 
