--- a/web/src/main/webapp/cliente/detalle_compra.xhtml
+++ b/web/src/main/webapp/cliente/detalle_compra.xhtml
@@ -15,41 +15,58 @@
     <ui:define name="contenido">
 
         <div class="container mt-4 mb-4">
-            <p:panel id="detalle_compra" header="Detalle de la compra" styleClass="mt-3">
+
+            <p:staticMessage rendered="#{(detalleCompraBean.clienteDiferente || !detalleCompraBean.compraEncontrada) ? 'true' : 'false' }" severity="info" summary="INFO" detail="No se pudo visualizar la compra" style="width: 100%; margin-top: 10px"/>
+
+            <p:panel rendered="#{(!detalleCompraBean.clienteDiferente ) ? 'true' : 'false' }" id="detalle_compra" header="Detalle de la compra" styleClass="mt-3">
                 <div>
                     <div>
-                        <strong class="d-inline-block me-2">Pelicula: </strong> <p:outputLabel value="#{detalleCompraBean.compra.funcion.pelicula.nombre}" />
+                        <strong class="d-inline-block me-2">Código de la compra: </strong>
+                        <p:barcode value="#{detalleCompraBean.compra.codigo.toString()}" type="qr" width="125" height="125"/>
+                    </div>
+                    <hr />
+
+                    <div>
+                        <strong class="d-inline-block me-2 mt-2">Pelicula: </strong> <p:outputLabel value="#{detalleCompraBean.compra.funcion.pelicula.nombre}" />
                     </div>
 
                     <div>
-                        <strong class="d-inline-block me-2 mt-2">Horario: </strong> <p:outputLabel value="#{detalleCompraBean.compra.fechaPelicula}" />
+                        <strong class="d-inline-block me-2 mt-2">Horario: </strong> <p:outputLabel value="#{detalleCompraBean.compra.fechaFuncion}, Hora: #{detalleCompraBean.compra.funcion.horario.hora}" />
                     </div>
 
                     <div>
-                        <strong class="d-inline-block me-2 mt-2">Horario: </strong> <p:outputLabel value="#{detalleCompraBean.compra.funcion.sala.teatro.ciudad.nombre} - #{detalleCompraBean.compra.funcion.sala.teatro.direccion} - #{detalleCompraBean.compra.funcion.sala.numero}" />
+                        <strong class="d-inline-block me-2 mt-2">Ubicación: </strong> <p:outputLabel value="#{detalleCompraBean.compra.funcion.sala.teatro.ciudad.nombre} - #{detalleCompraBean.compra.funcion.sala.teatro.nombre}" />
+                    </div>
+
+                    <div>
+                        <strong class="d-inline-block me-2 mt-2">Sala: </strong> <p:outputLabel value="#{detalleCompraBean.compra.funcion.sala.numero}" />
                     </div>
                     <hr />
                     <div>
                         <strong>Entradas:</strong>
-                        <p:repeat value="#{detalleCompraBean.compra.entradas}" var="entrada">
-                            <div>
-                                <p:outputLabel styleClass="d-inline-block me-3" value="#{entrada.fila}-#{entrada.columna}" />
-                                <p:outputLabel styleClass="d-inline-block" value="#{detalleCompraBean.compra.funcion.precio}" />
-                            </div>
-                        </p:repeat>
+                        <h:form id="entradas_detalle">
+                            <p:repeat value="#{detalleCompraBean.compra.entradas}" var="entrada">
+                                <div>
+                                    <p:outputLabel styleClass="d-inline-block me-3" value="#{entrada.fila}-#{entrada.columna}" />
+                                    <p:outputLabel styleClass="d-inline-block" value="$#{detalleCompraBean.compra.funcion.precio}" />
+                                </div>
+                            </p:repeat>
+                        </h:form>
                     </div>
                     <hr />
                     <div class="mt-3">
                         <strong>Confitería:</strong>
-                        <p:repeat value="#{detalleCompraBean.compra.comprasConfiteria}" var="confiteria">
-                            <div >
-                                <p:outputLabel styleClass="d-inline-block me-3" value="#{confiteria.productoConfiteria.nombre}" />
-                                <p:outputLabel styleClass="d-inline-block" value="#{confiteria.unidades} X $#{confiteria.productoConfiteria.precio}" />
-                            </div>
-                        </p:repeat>
+                        <h:form id="confiteria_detalle">
+                            <p:repeat value="#{detalleCompraBean.compra.comprasConfiteria}" var="confiteria">
+                                <div >
+                                    <p:outputLabel styleClass="d-inline-block me-3" value="#{confiteria.productoConfiteria.nombre}" />
+                                    <p:outputLabel styleClass="d-inline-block" value="#{confiteria.unidades} X $#{confiteria.productoConfiteria.precio}" />
+                                </div>
+                            </p:repeat>
+                        </h:form>
                     </div>
                     <hr />
-                    <h4 class="mt-3">Total: $#{detalleCompraBean.compra.precioTotal}</h4>
+                    <h4 jsf:id="precio_total" class="mt-3">Total: $#{detalleCompraBean.compra.precioTotal}</h4>
                 </div>
             </p:panel>
         </div>
