--- a/web/src/main/webapp/WEB-INF/template_index_admin.xhtml
+++ b/web/src/main/webapp/WEB-INF/template_index_admin.xhtml
@@ -26,31 +26,7 @@
                     <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                         <h:graphicImage library="img" name="logo_unicine_blancoRec.png" styleClass="img_icon me-2"/>
                     </a>
-                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                        <li><a href="" class="nav-link px-2 text-white">En Cartelera</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white">Próximamente</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white">Confitería</a></li>
-                    </ul>
-
-                    <h:form styleClass="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                        <div class="input-search ui-inputgroup">
-                            <p:inputText placeholder="¿Qué película está buscando?" required="true"
-                                         value="#{busquedaBean.busqueda}" styleClass="busqueda_form"/>
-                            <p:commandButton update="@form" icon="pi pi-search" action="#{busquedaBean.buscar}"/>
-                        </div>
-                    </h:form>
-
-                    <div class="text-end">
-                        <h:form rendered="#{!seguridadBean.autenticado}">
-                            <p:commandButton value="Login" oncomplete="PF('login').show()" styleClass="ui-button-outlined ui-badge-secondary me-2" />
-                            <p:linkButton value="Registrarse" href="/registroCliente.xhtml" styleClass="sin-linea"/>
-                        </h:form>
-
-                        <h:form rendered="#{seguridadBean.autenticado}" >
-                            <p:linkButton value="Mi perfil" icon="pi pi-user" styleClass="me-3 sin-linea" href="/cliente/mi_perfil.xhtml"/>
-                            <p:commandButton value="Cerrar sesión" action="#{seguridadBean.cerrarSesion()}" styleClass="ui-button-outlined ui-badge-secondary me-2" />
-                        </h:form>
-                    </div>
+                    <p:outputLabel value="Login Administradores" styleClass="me-4"/>
                 </div>
             </div>
         </header>
